--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
     <script src="main.js" defer></script>   
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav id="navbar"></nav>
+        <div class="navbar__logo"></div>
+            <img src="imgs/favicon.png" alt="nav-logo">
+            <a href="#">SeongJin</a>
+        <ul class="navbar__menu">
+            <li class="navbar__menu__item">Home</li>
+            <li class="navbar__menu__item">About</li>
+            <li class="navbar__menu__item">Skills</li>
+            <li class="navbar__menu__item">My work</li>
+            <li class="navbar__menu__item">Testimonial</li>
+            <li class="navbar__menu__item">Contact</li>
+        </ul>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skills -->
+    <section id="skills"></section>
+    <!-- Work -->
+    <section id="work"></section>
+    <!-- Testimonials -->
+    <section id="testimonials"></section>
+    <!-- Contact -->
+    <section id="contact"></section>
 </body>
 </html>
