--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav id="navbar"></nav>
-        <div class="navbar__logo"></div>
+    <nav id="navbar">
+        <div class="navbar__logo">
             <img src="imgs/favicon.png" alt="nav-logo">
             <a href="#">SeongJin</a>
+        </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item">Home</li>
             <li class="navbar__menu__item">About</li>
@@ -28,6 +29,16 @@
             <li class="navbar__menu__item">Testimonial</li>
             <li class="navbar__menu__item">Contact</li>
         </ul>
+    </nav>
+
+    <!-- Home -->
+    <section id="home">
+        <img src="imgs/profile.jpeg" alt="Jin's profile photo" class="home__avatar">
+        <h1 class="home__title">Hello, <br>I'm SeongJin</h1>
+        <h2 class="home__description">Front-end Programmer</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
+
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
