--- a/index.html
+++ b/index.html
@@ -40,7 +40,53 @@
     </section>
 
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>I'm 25 years old. Learning progroming since 2022. I'm from Busan National University. </p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-brands fa-js"></i>                
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__deescription">
+                    HTML, CSS, JavaScript, TypeScript,
+                    <br>React, Vue, Web APIs
+                </div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-solid fa-server"></i>                </div>
+                <div class="major__title">Back-end</div>
+                <div class="major__deescription">
+                    JavaScript, NodeJs
+                    <br>Rest APIs, GraphGL
+                </div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-solid fa-mobile-button"></i>                
+                </div>
+                <div class="major__title">Mobile</div>
+                <div class="major__deescription">
+                    iOS, React Native
+                    <br>Swift
+                </div>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <div class="job">
+                <img src="imgs/jobs/amazon.png" alt="amazon logo" class="job__logo">
+                <p class="job__name">Currently working at Amazon as Software Engineer</p>
+                <p class="job__period">2024 March - Until now</p>
+            </div>
+            <div class="job">
+                <img src="imgs/jobs/amazon.png" alt="amazon logo" class="job__logo">
+                <p class="job__name">Internship at the Amazon</p>
+                <p class="job__period">2023 Sept - 2024 Feb</p> 
+            </div>
+        </div>
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
