--- a/index.html
+++ b/index.html
@@ -219,7 +219,30 @@
         </div>
 
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img class="testimonial__avatar" src="imgs/testimonial/people1.png" alt="People">
+            </div>
+            <div class="testimonial__speach-bubble">
+                <p>blablablablabla</p>
+                <p class="name"><a href="">Jin</a>Samsung</p>
+            </div>
+
+        </div>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img class="testimonial__avatar" src="imgs/testimonial/people1.png" alt="People">
+            </div>
+            <div class="testimonial__speach-bubble">
+                <p>blablablablabla</p>
+                <p class="name"><a href="">Jin</a>Samsung</p>
+            </div>
+
+        </div>
+    </section>
 
     <!-- Contact -->
     <section id="contact"></section>
