--- a/index.html
+++ b/index.html
@@ -245,6 +245,19 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">seongjin8247@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/jin1401/jin1401" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/seongjin-park-545262237/" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+        </div>
+        <p class="contact__rights">2023 Seongjin Park - All rights reserved</p>
+
+    </section>
 </body>
 </html>
