--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
         <p>I'm 25 years old. Learning progroming since 2022. I'm from Busan National University. </p>
         <div class="about__majors">
@@ -48,17 +48,18 @@
                 <div class="major__icon">
                     <i class="fa-brands fa-js"></i>                
                 </div>
-                <div class="major__title">Front-end</div>
-                <div class="major__deescription">
+                <h2 class="major__title">Front-end</h2>
+                <div class="major__description">
                     HTML, CSS, JavaScript, TypeScript,
                     <br>React, Vue, Web APIs
                 </div>
             </div>
             <div class="major">
                 <div class="major__icon">
-                    <i class="fa-solid fa-server"></i>                </div>
-                <div class="major__title">Back-end</div>
-                <div class="major__deescription">
+                    <i class="fa-solid fa-server"></i>                
+                </div>
+                <h2 class="major__title">Back-end</h2>
+                <div class="major__description">
                     JavaScript, NodeJs
                     <br>Rest APIs, GraphGL
                 </div>
@@ -67,8 +68,8 @@
                 <div class="major__icon">
                     <i class="fa-solid fa-mobile-button"></i>                
                 </div>
-                <div class="major__title">Mobile</div>
-                <div class="major__deescription">
+                <h2 class="major__title">Mobile</h2>
+                <div class="major__description">
                     iOS, React Native
                     <br>Swift
                 </div>
@@ -77,19 +78,23 @@
         <div class="about__jobs">
             <div class="job">
                 <img src="imgs/jobs/amazon.png" alt="amazon logo" class="job__logo">
-                <p class="job__name">Currently working at Amazon as Software Engineer</p>
-                <p class="job__period">2024 March - Until now</p>
+                <div class="job__description">
+                    <p class="job__name">Currently working at Amazon as Software Engineer</p>
+                    <p class="job__period">2024 March - Until now</p>
+                </div>
             </div>
             <div class="job">
                 <img src="imgs/jobs/amazon.png" alt="amazon logo" class="job__logo">
-                <p class="job__name">Internship at the Amazon</p>
-                <p class="job__period">2023 Sept - 2024 Feb</p> 
+                <div class="job__description">
+                    <p class="job__name">Internship at the Amazon</p>
+                    <p class="job__period">2023 Sept - 2024 Feb</p> 
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>Experience with all phases of the software life-cycle. Passion for learning new technologies. Capable of working within a team environment and independently. Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.</p>
@@ -157,7 +162,7 @@
     </section>
 
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work" class="section"></section>
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -219,7 +224,7 @@
         </div>
 
     <!-- Testimonials -->
-    <section id="testimonials">
+    <section id="testimonialsclass="section">
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
@@ -245,7 +250,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">seongjin8247@gmail.com</h2>
         <div class="contact__links">
