--- a/index.html
+++ b/index.html
@@ -164,69 +164,78 @@
     </section>
 
     <!-- Work -->
-    <section id="work" class="section"></section>
+    <section id="work" class="section">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-            <button class="category__btn">All<span class="category__count">8</span></button>
+            <button class="category__btn active">All<span class="category__count">8</span></button>
             <button class="category__btn">Front-end<span class="category__count">3</span></button>
             <button class="category__btn">Back-end<span class="category__count">3</span></button>
             <button class="category__btn">Mobile<span class="category__count">2</span></button>
         </div>
 
         <div class="work__projects">
-            <a href="https://github.com/jin1401/Mokepon" class="project"></a>
-            <img class="project__img" src="imgs/projects/project1.png" alt="1st project">
-            <div class="project__description">
-                <h3>Mokepon site</h3>
-                <span>Clone coding with HTML and CSS</span>
-            </div>
-            <a href="https://github.com/jin1401/Mokepon" class="project"></a>
-            <img class="project__img" src="imgs/projects/project2.png" alt="2nd project">
-            <div class="project__description">
-                <h3>2nd site</h3>
-                <span>Clone coding with HTML and CSS</span>
-            </div>
-            <a href="https://github.com/jin1401/Mokepon" class="project"></a>
-            <img class="project__img" src="imgs/projects/project3.png" alt="3rd project">
-            <div class="project__description">
-                <h3>3rd site</h3>
-                <span>Clone coding with HTML and CSS</span>
-            </div>
-            <a href="https://github.com/jin1401/Mokepon" class="project"></a>
-            <img class="project__img" src="imgs/projects/project4.png" alt="4th project">
-            <div class="project__description">
-                <h3>4th site</h3>
-                <span>Clone coding with HTML and CSS</span>
-            </div>
-            <a href="https://github.com/jin1401/Mokepon" class="project"></a>
-            <img class="project__img" src="imgs/projects/project5.png" alt="5th project">
-            <div class="project__description">
-                <h3>5th site</h3>
-                <span>Clone coding with HTML and CSS</span>
-            </div>
-            <a href="https://github.com/jin1401/Mokepon" class="project"></a>
-            <img class="project__img" src="imgs/projects/project6.png" alt="6th project">
-            <div class="project__description">
-                <h3>Mokepon site</h3>
-                <span>Clone coding with HTML and CSS</span>
-            </div>
-            <a href="https://github.com/jin1401/Mokepon" class="project"></a>
-            <img class="project__img" src="imgs/projects/project7.png" alt="7th project">
-            <div class="project__description">
-                <h3>7th site</h3>
-                <span>Clone coding with HTML and CSS</span>
-            </div>
-            <a href="https://github.com/jin1401/Mokepon" class="project"></a>
-            <img class="project__img" src="imgs/projects/project8.png" alt="8th project">
-            <div class="project__description">
-                <h3>8th site</h3>
-                <span>Clone coding with HTML and CSS</span>
-            </div>
+            <a href="https://github.com/jin1401/Mokepon" class="project">
+                <img class="project__img" src="imgs/projects/project1.png" alt="1st project">
+                <div class="project__description">
+                    <h3>Mokepon site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://github.com/jin1401/Mokepon" class="project">
+                <img class="project__img" src="imgs/projects/project2.png" alt="2nd project">
+                <div class="project__description">
+                    <h3>2nd site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>  
+            <a href="https://github.com/jin1401/Mokepon" class="project">
+                <img class="project__img" src="imgs/projects/project3.png" alt="3rd project">
+                <div class="project__description">
+                    <h3>3rd site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a> 
+            <a href="https://github.com/jin1401/Mokepon" class="project">
+                <img class="project__img" src="imgs/projects/project4.png" alt="4th project">
+                <div class="project__description">
+                    <h3>4th site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://github.com/jin1401/Mokepon" class="project">
+                <img class="project__img" src="imgs/projects/project5.png" alt="5th project">
+                <div class="project__description">
+                    <h3>5th site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://github.com/jin1401/Mokepon" class="project">
+                <img class="project__img" src="imgs/projects/project6.png" alt="6th project">
+                <div class="project__description">
+                    <h3>Mokepon site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div> 
+            </a>           
+            <a href="https://github.com/jin1401/Mokepon" class="project">
+                <img class="project__img" src="imgs/projects/project7.png" alt="7th project">
+                <div class="project__description">
+                    <h3>7th site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://github.com/jin1401/Mokepon" class="project">
+                <img class="project__img" src="imgs/projects/project8.png" alt="8th project">
+                <div class="project__description">
+                    <h3>8th site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
         </div>
+    </section>
 
     <!-- Testimonials -->
-    <section id="testimonialsclass="section">
+    <section id="testimonials" class="section">
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
