--- a/index.html
+++ b/index.html
@@ -240,23 +240,27 @@
         <h3>See what they say about me</h3>
         <div class="testimonials">
             <div class="testimonial">
-                <img class="testimonial__avatar" src="imgs/testimonial/people1.png" alt="People">
+                <img 
+                    class="testimonial__avatar" 
+                    src="imgs/testimonial/people1.png" 
+                    alt="People"
+                />
+                <div class="testimonial__speach-bubble">
+                    <p>blablablablablablablablablablablablablablablablablablablabla</p>
+                    <p class="name"><a href="">Jin</a>Samsung</p>
+                </div>
             </div>
-            <div class="testimonial__speach-bubble">
-                <p>blablablablabla</p>
-                <p class="name"><a href="">Jin</a>Samsung</p>
-            </div>
-
-        </div>
-        <div class="testimonials">
             <div class="testimonial">
-                <img class="testimonial__avatar" src="imgs/testimonial/people1.png" alt="People">
+                <div class="testimonial__speach-bubble">
+                    <p>blabblablablablablablablablablablablablablablablalablablabla</p>
+                    <p class="name"><a href="">Jin</a>Samsung</p>
+                </div>
+                <img 
+                class="testimonial__avatar" 
+                src="imgs/testimonial/people1.png" 
+                alt="People"
+                />
             </div>
-            <div class="testimonial__speach-bubble">
-                <p>blablablablabla</p>
-                <p class="name"><a href="">Jin</a>Samsung</p>
-            </div>
-
         </div>
     </section>
 
