CSS: Fix section container

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 
     <!-- Work -->
     <section id="work" class="section">
+       <div class="section__container"> 
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -232,34 +233,37 @@
                 </div>
             </a>
         </div>
+       </div>
     </section>
 
     <!-- Testimonials -->
     <section id="testimonials" class="section">
-        <h1>Testimonials</h1>
-        <h3>See what they say about me</h3>
-        <div class="testimonials">
-            <div class="testimonial">
-                <img 
+        <div class="section__container">
+            <h1>Testimonials</h1>
+            <h3>See what they say about me</h3>
+            <div class="testimonials">
+                <div class="testimonial">
+                    <img 
+                        class="testimonial__avatar" 
+                        src="imgs/testimonial/people1.png" 
+                        alt="People"
+                    />
+                    <div class="testimonial__speach-bubble">
+                        <p>blablablablablablablablablablablablablablablablablablablabla</p>
+                        <p class="name"><a href="">Jin</a>Samsung</p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial__speach-bubble">
+                        <p>blabblablablablablablablablablablablablablablablalablablabla</p>
+                        <p class="name"><a href="">Jin</a>Samsung</p>
+                    </div>
+                    <img 
                     class="testimonial__avatar" 
                     src="imgs/testimonial/people1.png" 
                     alt="People"
-                />
-                <div class="testimonial__speach-bubble">
-                    <p>blablablablablablablablablablablablablablablablablablablabla</p>
-                    <p class="name"><a href="">Jin</a>Samsung</p>
+                    />
                 </div>
-            </div>
-            <div class="testimonial">
-                <div class="testimonial__speach-bubble">
-                    <p>blabblablablablablablablablablablablablablablablalablablabla</p>
-                    <p class="name"><a href="">Jin</a>Samsung</p>
-                </div>
-                <img 
-                class="testimonial__avatar" 
-                src="imgs/testimonial/people1.png" 
-                alt="People"
-                />
             </div>
         </div>
     </section>
