JS : Home transparent

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 
     <!-- Home -->
     <section id="home">
-        <img src="imgs/profile.jpeg" alt="Jin's profile photo" class="home__avatar">
-        <h1 class="home__title">Hello, <br>I'm SeongJin</h1>
-        <h2 class="home__description">Front-end Programmer</h2>
-        <button class="home__contact">Contact Me</button>
+        <div class="home__container">
+            <img src="imgs/profile.jpeg" alt="Jin's profile photo" class="home__avatar">
+            <h1 class="home__title">Hello, <br>I'm SeongJin</h1>
+            <h2 class="home__description">Front-end Programmer</h2>
+            <button class="home__contact">Contact Me</button>
+        </div>
     </section>
 
     <!-- About -->
