--- a/index.html
+++ b/index.html
@@ -290,5 +290,11 @@
         <p class="contact__rights">2023 Seongjin Park - All rights reserved</p>
 
     </section>
+
+    <!-- Arrow up -->
+    <button class="arrow-up">
+        <i class="fa-solid fa-arrow-up"></i>
+    </button>
+
 </body>
 </html>
