JS : Project filtering

--- a/index.html
+++ b/index.html
@@ -176,63 +176,63 @@
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn active">All<span class="category__count">8</span></button>
-                <button class="category__btn">Front-end<span class="category__count">3</span></button>
-                <button class="category__btn">Back-end<span class="category__count">3</span></button>
-                <button class="category__btn">Mobile<span class="category__count">2</span></button>
+                <button class="category__btn active" data-filter="*">All<span class="category__count">8</span></button>
+                <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">4</span></button>
+                <button class="category__btn" data-filter="back-end">Back-end<span class="category__count">2</span></button>
+                <button class="category__btn" data-filter="mobile">Mobile<span class="category__count">2</span></button>
             </div>
 
             <div class="work__projects">
-                <a href="https://github.com/jin1401/Mokepon" class="project">
+                <a href="https://github.com/jin1401/Mokepon" class="project" target="blank" data-type="front-end">
                     <img class="project__img" src="imgs/projects/project1.png" alt="1st project">
                     <div class="project__description">
                         <h3>Mokepon site</h3>
                         <span>Clone coding with HTML and CSS</span>
                     </div>
                 </a>
-                <a href="https://github.com/jin1401/Mokepon" class="project">
+                <a href="https://github.com/jin1401/Mokepon" class="project" target="blank" data-type="front-end">
                     <img class="project__img" src="imgs/projects/project2.png" alt="2nd project">
                     <div class="project__description">
                         <h3>2nd site</h3>
                         <span>Clone coding with HTML and CSS</span>
                     </div>
                 </a>  
-                <a href="https://github.com/jin1401/Mokepon" class="project">
+                <a href="https://github.com/jin1401/Mokepon" class="project" target="blank" data-type="back-end">
                     <img class="project__img" src="imgs/projects/project3.png" alt="3rd project">
                     <div class="project__description">
                         <h3>3rd site</h3>
                         <span>Clone coding with HTML and CSS</span>
                     </div>
                 </a> 
-                <a href="https://github.com/jin1401/Mokepon" class="project">
+                <a href="https://github.com/jin1401/Mokepon" class="project" target="blank" data-type="front-end">
                     <img class="project__img" src="imgs/projects/project4.png" alt="4th project">
                     <div class="project__description">
                         <h3>4th site</h3>
                         <span>Clone coding with HTML and CSS</span>
                     </div>
                 </a>
-                <a href="https://github.com/jin1401/Mokepon" class="project">
+                <a href="https://github.com/jin1401/Mokepon" class="project" target="blank" data-type="mobile">
                     <img class="project__img" src="imgs/projects/project5.png" alt="5th project">
                     <div class="project__description">
                         <h3>5th site</h3>
                         <span>Clone coding with HTML and CSS</span>
                     </div>
                 </a>
-                <a href="https://github.com/jin1401/Mokepon" class="project">
+                <a href="https://github.com/jin1401/Mokepon" class="project" target="blank" data-type="front-end">
                     <img class="project__img" src="imgs/projects/project6.png" alt="6th project">
                     <div class="project__description">
                         <h3>Mokepon site</h3>
                         <span>Clone coding with HTML and CSS</span>
                     </div> 
                 </a>           
-                <a href="https://github.com/jin1401/Mokepon" class="project">
+                <a href="https://github.com/jin1401/Mokepon" class="project" target="blank" data-type="mobile">
                     <img class="project__img" src="imgs/projects/project7.png" alt="7th project">
                     <div class="project__description">
                         <h3>7th site</h3>
                         <span>Clone coding with HTML and CSS</span>
                     </div>
                 </a>
-                <a href="https://github.com/jin1401/Mokepon" class="project">
+                <a href="https://github.com/jin1401/Mokepon" class="project" target="blank" data-type="back-end">
                     <img class="project__img" src="imgs/projects/project8.png" alt="8th project">
                     <div class="project__description">
                         <h3>8th site</h3>
@@ -252,22 +252,22 @@
                 <div class="testimonial">
                     <img 
                         class="testimonial__avatar" 
-                        src="imgs/testimonial/people1.png" 
+                        src="imgs/testimonial/elon.png" 
                         alt="People"
                     />
                     <div class="testimonial__speach-bubble">
-                        <p>blablablablablablablablablablablablablablablablablablablabla</p>
-                        <p class="name"><a href="">Jin</a>Samsung</p>
+                        <p>He is very nice. Working with him was my faviroite experience in my life. </p>
+                        <p class="name"><a href="">Elon Musk </a>Tesla</p>
                     </div>
                 </div>
                 <div class="testimonial">
                     <div class="testimonial__speach-bubble">
-                        <p>blabblablablablablablablablablablablablablablablalablablabla</p>
-                        <p class="name"><a href="">Jin</a>Samsung</p>
+                        <p>He is the best mid player. </p>
+                        <p class="name"><a href="">Faker </a>T1</p>
                     </div>
                     <img 
                     class="testimonial__avatar" 
-                    src="imgs/testimonial/people1.png" 
+                    src="imgs/testimonial/faker.png" 
                     alt="People"
                     />
                 </div>
