--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#">SeongJin</a>
         </div>
         <ul class="navbar__menu">
-            <li class="navbar__menu__item active" data-link="#home">Home</li>
+            <li class="navbar__menu__item" data-link="#home">Home</li>
             <li class="navbar__menu__item" data-link="#about">About</li>
             <li class="navbar__menu__item" data-link="#skills">Skills</li>
             <li class="navbar__menu__item" data-link="#work">My work</li>
@@ -176,7 +176,7 @@
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn active" data-filter="*">All<span class="category__count">8</span></button>
+                <button class="category__btn selected" data-filter="*">All<span class="category__count">8</span></button>
                 <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">4</span></button>
                 <button class="category__btn" data-filter="back-end">Back-end<span class="category__count">2</span></button>
                 <button class="category__btn" data-filter="mobile">Mobile<span class="category__count">2</span></button>
