--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
     <!-- Contact -->
     <section id="contact" class="section">
-        <h1 class="contact__title">Let's talk</h1>
+        <h1 class="contact__title">To contact</h1>
         <h2 class="contact__email">seongjin8247@gmail.com</h2>
         <div class="contact__links">
             <a href="https://github.com/jin1401/jin1401" target="_blank">
